Date	Added

2006/09/07
	* Changed the default of sg_angel_skill_ratio to 10 based on recent
	  information from Tharis. [Skotlex]
	* Added sg_angel_skill_ratio to specify rate at which the Angel skill
	  triggers. [Skotlex]
	* Increased duration of Miracle of the Sun/Moon/Stars to one hour.
	  [Skotlex]
	* Changed gvg_short_attack_damage_rate to 80, as leaked X.2 [Vicious]
2006/09/06
	* Reverted back the default view/chase range of mobs to 100% since eA now
	  uses square view areas, like Aegis. [Skotlex]
2006/09/05
	* Removed setting mob_show_hp, it's been replaced now by mob_show_info,
	  which can be used to specify what kind of info should be displayed from a
	  mob. Current options are two different formats for Hp display, and current
	  level (monster.conf). [Skotlex]
2006/08/31
	* Added setting attack_walk_delay which specifies whether a character
	  should (or not) be able to move inmediately after starting a normal attack
	  (battle.conf). Defaults to 0 since that's what Aegis uses. [Skotlex]
	* Corrected battle config name max_walk_rate, it should be named
	  max_walk_speed. [Skotlex]
2006/08/29
	* monster_ai&1 now only signals whether mobs should update their target
	  cell while chasing more frequently (rather than being state-driven like
	  Aegis) [Skotlex]
	* Changed the defaults of view_range_rate and chase_range_rate to 120 to
	  aproximate better Aegis's view ranges (which are square areas and not
	  circles), so eA's default of 100 leads to a circular area contained
	  within a 21x21 square zone (what Aegis uses), by using 20%, the circular
	  area increases range to 12, which better approximates Aegis's 21x21 area.
	  [Skotlex]
2006/08/24
	* Changed the default of clear_skills_on_death to 0 [Skotlex]
	* Added setting clear_skills_on_warp to specify when a character's
	  land-based skills are deleted when the caster changes maps. Defaults to all
	  types (skill.conf). [Skotlex]